@@ -132,9 +132,8 @@
 @implementation GroupDAVStore
 - (NSDictionary *)defaults
 {
-  return [NSDictionary dictionaryWithObjectsAndKeys:
-			 [NSArchiver archivedDataWithRootObject:[NSColor blueColor]], ST_COLOR,
-		       [NSArchiver archivedDataWithRootObject:[NSColor darkGrayColor]], ST_TEXT_COLOR,
+  return [NSDictionary dictionaryWithObjectsAndKeys:[[NSColor blueColor] description], ST_COLOR,
+		       [[NSColor darkGrayColor] description], ST_TEXT_COLOR,
 		       [NSNumber numberWithBool:NO], ST_RW,
 		       [NSNumber numberWithBool:YES], ST_DISPLAY,
 		       nil, nil];
